[gd_scene load_steps=10 format=3 uid="uid://d1jqkutugwiuf"]

[ext_resource type="Theme" uid="uid://d3w3vt3s6ujoh" path="res://assets/defaults/default_theme.tres" id="1"]
[ext_resource type="Shader" path="res://common/main_menu_bg.gdshader" id="2"]
[ext_resource type="Texture2D" uid="uid://bwuce5d5a2314" path="res://assets/icons/cookie-grayscale.png" id="4"]
[ext_resource type="Script" path="res://client/menus/pause_menu.gd" id="6"]
[ext_resource type="PackedScene" uid="uid://bwy7gmeseew1j" path="res://common/scenes/sound_button/sound_button.tscn" id="7"]
[ext_resource type="PackedScene" uid="uid://jeq4trt5v2ii" path="res://client/menus/options_menu.tscn" id="8"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.654902, 0.12549, 0.12549, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="3"]
bg_color = Color(0.352941, 0.788235, 0.866667, 1)

[sub_resource type="ShaderMaterial" id="4"]
shader = ExtResource("2")

[node name="PauseMenu" type="PopupPanel" groups=["pausemenu"]]
process_mode = 3
size = Vector2i(250, 234)
exclusive = true
theme = ExtResource("1")
theme_override_styles/panel = SubResource("1")
script = ExtResource("6")

[node name="Container" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
offset_left = -25.0
offset_top = -23.4
offset_right = 25.0
offset_bottom = 23.4

[node name="Label" type="Label" parent="Container"]
layout_mode = 2
size_flags_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "MENU_LABEL_PAUSED"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Resume" parent="Container" instance=ExtResource("7")]
layout_mode = 2
size_flags_vertical = 3
text = "MENU_LABEL_RESUME"
clip_text = true

[node name="Options" parent="Container" instance=ExtResource("7")]
layout_mode = 2
size_flags_vertical = 3
text = "MENU_OPTIONS"
clip_text = true

[node name="SaveGame" parent="Container" instance=ExtResource("7")]
layout_mode = 2
size_flags_vertical = 3
text = "MENU_IO_SAVE_GAME"
clip_text = true

[node name="ExitMenu" parent="Container" instance=ExtResource("7")]
layout_mode = 2
size_flags_vertical = 3
text = "MENU_LABEL_RETURN_MENU"
clip_text = true

[node name="ExitDesktop" parent="Container" instance=ExtResource("7")]
layout_mode = 2
size_flags_vertical = 3
text = "MENU_LABEL_DESKTOP"
clip_text = true

[node name="SavegameNameInput" type="Window" parent="."]
visible = false
theme = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="SavegameNameInput"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0

[node name="Label" type="Label" parent="SavegameNameInput/VBoxContainer"]
layout_mode = 2
text = "MENU_IO_ENTER_SAVEGAME_NAME"

[node name="LineEdit" type="LineEdit" parent="SavegameNameInput/VBoxContainer"]
layout_mode = 2
context_menu_enabled = false

[node name="Button" parent="SavegameNameInput/VBoxContainer" instance=ExtResource("7")]
layout_mode = 2
disabled = true
text = "MENU_IO_SAVE"

[node name="OverrideSave" type="ConfirmationDialog" parent="."]
dialog_text = "Another save has the same name. Do you want to override it?"

[node name="OptionsWindow" type="PopupPanel" parent="."]
theme_override_styles/panel = SubResource("3")

[node name="Control" type="Control" parent="OptionsWindow"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="OptionsWindow/Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 29.0
grow_horizontal = 2
theme_type_variation = &"HeaderLarge"
text = "MENU_OPTIONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsMenu" parent="OptionsWindow/Control" instance=ExtResource("8")]
layout_mode = 1
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="OptionsWindow/Control"]
self_modulate = Color(0.184314, 0.729412, 0.85098, 1)
show_behind_parent = true
material = SubResource("4")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4")
stretch_mode = 1

[connection signal="pressed" from="Container/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Container/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Container/SaveGame" to="." method="_on_SaveGame_pressed"]
[connection signal="pressed" from="Container/ExitMenu" to="." method="_on_ExitMenu_pressed"]
[connection signal="pressed" from="Container/ExitDesktop" to="." method="_on_ExitDesktop_pressed"]
[connection signal="text_changed" from="SavegameNameInput/VBoxContainer/LineEdit" to="." method="_on_Savegame_LineEdit_text_changed"]
[connection signal="text_submitted" from="SavegameNameInput/VBoxContainer/LineEdit" to="." method="_save_game"]
[connection signal="pressed" from="SavegameNameInput/VBoxContainer/Button" to="." method="_on_Savegame_Button_pressed"]
[connection signal="confirmed" from="OverrideSave" to="." method="_on_OverrideSave_confirmed"]
[connection signal="quit" from="OptionsWindow/Control/OptionsMenu" to="." method="_on_OptionsMenu_quit"]
